--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,33 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+.section-title {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.header--title {
+  font-size: 50px;
+  margin:0;
+}
+.header--subtitle{
+  font-size: 35px;
+  font-weight: 300;
+}
+
+main {
+  background-color: var(--backgroundColor);
+}
+
+header {
+  background-color: var(--backgroundColor)!important;
+}
+
+footer {
+  background-color: var(--backgroundColor)!important;
+  
+}
+
 .text-left {
   text-align: left !important;
 }
