--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,5 +1,9 @@
 :root {
-  --backgroundColor: #f7f7f7;
-  --primaryColor: #191a1b;
-  --textColorSecondary: rgba(0, 0, 0, 0.45);
+  --backgroundColor: #ffffff;
+  --primaryColor: #43b14b;
+  --secondaryColor: #d77723;
+  --tertiaryColor: #efe7dd;
+  --textColorPrimary: #0f0e0c;
+  --textColorSecondary: #efe7dd;
+  /* --textColorSecondary: #0f0e0c; */
 }
