insert image logo and some fix on layout

--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,10 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+a:hover {
+  color: var(--secondaryColor);
+}
+
 .section-title {
   text-align: center;
   padding-top: 40px;
@@ -26,12 +30,15 @@ body {
 
 .button--action {
   background-color: var(--primaryColor);
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   font-size: 20px;
   color: #fff;
   border-radius: 20px;
   font-weight: 700;
-  width: 160px;
+  width: 200px;
   text-align: center;
 }
 
@@ -40,7 +47,6 @@ body {
 }
 
 .nav--link{
-  /* background-color: var(--primaryColor); */
   font-weight: 700;
 }
 
